tests/NormalTests/paczka1/fuzzy1/98905020.err
Error in line 2: S752 S752 7,9
Error in line 8: nrSWigJ2Mn3 S827 89,1
Error in line 1: PVZsPWJp S752 18,1
Error in line 14: nrSWigJ2Mn3 A496 89,8
Error in line 26: UcEk S827 8,7
